added code for section

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.098
+MODULE_VERSION: 0.102
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
@@ -29,6 +29,8 @@ TABLE: tbl_oer_groups
 TABLE: tbl_oer_institutions
 TABLE: tbl_oer_institution_types
 TABLE: tbl_oer_group_institutions
+TABLE: tbl_oer_productsections
+TABLE: tbl_oer_sectionnodes
 
 TEXT: mod_oer_maintitle1|Main title 1|Unesco’s Open Educational Resources Platform
 TEXT: mod_oer_maintitle2|Main title 2|UNESCO OER PRODUCTS
@@ -138,6 +140,17 @@ TEXT: mod_oer_updateproductpicture|Phrase Update product cover picture|Update pr
 TEXT: mod_oer_pleasewait|Phrase please wait|Please wait
 TEXT: mod_oer_saving|Word Saving|Saving
 TEXT: mod_oer_loading|Word Loading|Loading
+
+COMMENT: TEXT FOR PRODUCT SECTION
+TEXT: mod_oer_forward|Word forward|Forward
+TEXT: mod_oer_background|Word background|Background
+TEXT: mod_oer_section|Word section|Section
+TEXT: mod_oer_sections|Word sections|Sections
+TEXT: mod_oer_confirm_delete_section|Phrase are you sure you want to delete this section|Are you sure you want to delete this section
+TEXT: mod_oer_addnode|Phrase Add new node|Add new node
+TEXT: mod_oer_nodename|Phrase Node name|Node name
+TEXT: mod_oer_createin|Phrase Create in|Create in
+TEXT: mod_oer_createsection|Phrase Create section|Create section
 
 COMMENT: TEXT FOR ADAPTATIONS
 TEXT: mod_oer_adaptation_heading_step1|Phrase Adaptation step 1|Adaptation step 1
