enabled demo mode and made rooms to recognize contexts

--- a/rtt/register.conf
+++ b/rtt/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Realtime Communication Tools
 MODULE_DESCRIPTION: Module supporting real time communications.
 MODULE_AUTHORS: Warren Windvogel, David Wafula
 MODULE_RELEASEDATE: 2010 09 14
-MODULE_VERSION: 1.012
+MODULE_VERSION: 1.013
 MODULE_PATH: rtt
 MODULE_ISADMIN: 0
 MODULE_HASADMINPAGE: 0
@@ -35,7 +35,8 @@ CONFIG: SIP_PORT|5060|mod_rtt_sipport_desc
 CONFIG: RTP_PORT|1935|mod_rtt_rtpport_desc
 CONFIG: OUTBOUND_PROXY|127.0.0.1|mod_rtt_outboundproxy_desc
 CONFIG: SIP_DOMAIN|127.0.0.1|mod_rtt_sipdomain_desc
-
+CONFIG: IS_DEMO|false|mod_rtt_isdemo
+CONFIG: DEFAULT_ROOM|rtt|mode_rtt_defaultroom
 
 
 
@@ -64,6 +65,8 @@ CONFIG: VIDEO_FEED_URL|http://localhost:7070/redfire/video/receiver.html|mod_rtt
 TABLE: tbl_rtt_jnlp
 TABLE: tbl_rtt_users
 
+TEXT: mod_rtt_isdemo|Is this a demo version|Is this a demo version ?
+TEXT: mod_rtt_defaultroom|Default room|Default room
 TEXT: mod_rtt_receiver|Video Feed URL|Video Feed URL
 TEXT: mod_rtt_streamer|Video Broadcasr URL|Video Broadcast URL
 TEXT: mod_rtt_baseurl|Base URL|Base URL
