enabled SIP params

--- a/rtt/register.conf
+++ b/rtt/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Realtime Communication Tools
 MODULE_DESCRIPTION: Module supporting real time communications.
 MODULE_AUTHORS: Warren Windvogel, David Wafula
 MODULE_RELEASEDATE: 2010 09 14
-MODULE_VERSION: 1.1001
+MODULE_VERSION: 1.1004
 MODULE_PATH: rtt
 MODULE_ISADMIN: 0
 MODULE_HASADMINPAGE: 0
@@ -36,7 +36,8 @@ CONFIG: RTP_PORT|1935|mod_rtt_rtpport_desc
 CONFIG: OUTBOUND_PROXY|127.0.0.1|mod_rtt_outboundproxy_desc
 CONFIG: SIP_DOMAIN|127.0.0.1|mod_rtt_sipdomain_desc
 CONFIG: IS_DEMO|false|mod_rtt_isdemo
-CONFIG: DEFAULT_ROOM|rtt|mode_rtt_defaultroom
+CONFIG: DEFAULT_ROOM|rtt|mod_rtt_defaultroom
+CONFIG: DEFAULT_SIP_PWD|1234|mod_rtt_defaultsippassword
 
 
 
@@ -65,6 +66,8 @@ CONFIG: VIDEO_FEED_URL|http://localhost:7070/redfire/video/receiver.html|mod_rtt
 TABLE: tbl_rtt_jnlp
 TABLE: tbl_rtt_users
 
+TEXT: mod_rtt_defaultroom|Default room|Default room
+TEXT: mod_rtt_defaultsippassword|Defualt SIP password|Default SIP password
 TEXT: mod_rtt_isdemo|Is this a demo version|Is this a demo version ?
 TEXT: mod_rtt_defaultroom|Default room|Default room
 TEXT: mod_rtt_receiver|Video Feed URL|Video Feed URL
