[pwando] Reformatted viewadaptation table per specs

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -10,6 +10,7 @@ MENU_CATEGORY: Resources
 
 DEPENDS: creativecommons
 
+UPDATE_DESCRIPTION: [pwando] - Reformatted viewadaptation table per specs
 UPDATE_DESCRIPTION: [pwando] - Added sections on view adaptation
 UPDATE_DESCRIPTION: [pwando] - On adaptations - added keywords and linked each to an institution
 UPDATE_DESCRIPTION: [pwando] - Users can now view the details of an adaptation by clicking on the respective thumbnail. Still WIP.
