[pwando] Reformatted viewadaptation table per specs - added missing fields in the view

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -163,6 +163,16 @@ TEXT: mod_oer_adaptation_heading_step5|Phrase Adaptation step 5|Adaptation step 
 TEXT: mod_oer_adaptations|Phrase UNESCO OER ADAPTATIONs|UNESCO OER ADAPTATIONS
 TEXT: mod_oer_newadaptation|Phrase New Adaptation|New Adaptation
 TEXT: mod_oer_adaptationscount|Word Adaptations|Adaptations
+TEXT: mod_oer_adaptedby|Phrase Adapted by|Adapted by
+TEXT: mod_oer_adaptedin|Phrase Adapted in|Adapted in
+TEXT: mod_oer_fullinfo|Phrase Full information on this institution|Full information on this institution
+TEXT: mod_oer_managedby|Phrase Managed by|Managed by
+TEXT: mod_oer_comments|Word Comments|Comments
+TEXT: mod_oer_viewgroup|Phrase View group|View group
+TEXT: mod_oer_makenewfromadaptation|Phrase Make a new adaptation using this UNESCO product|Make a new adaptation using this UNESCO product
+TEXT: mod_oer_existingadaptations|Phrase See existing adaptations of this UNESCO Product|See existing adaptations of this UNESCO Product
+TEXT: mod_oer_editmetadata|Phrase Edit metadata|Edit metadata
+TEXT: mod_oer_fullprodview|Phrase Full view of product|Full view of product
 
 COMMENT: THIS CRAP IS REPEATED MILLIONS OF TIMES... WHY NOT USES:??????????
 TEXT: mod_oer_loclat|Latitude|Latitude
@@ -193,6 +203,7 @@ TEXT: mod_oer_institution_name|Heading for institution name input|Institution na
 TEXT: mod_oer_institutiontype_heading_new|Heading for institution entry template|Add a new institution type
 TEXT: mod_oer_institutiontype_heading_edit|Heading for institution entry template|Edit existing institution information type
 TEXT: mod_oer_institutiontype_name|Heading for institution type input|Institution type
+TEXT: mod_oer_typeofinstitution_label|Label for type of institution|Type of institution
 
 COMMENT: ------------- TEXT FOR GROUPS ----------------
 TEXT: mod_oer_group_fieldset1|Heading for group fieldset no1 link|Group Details
