[pwando] Added update description

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,13 +3,14 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.104
+MODULE_VERSION: 0.105
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
 
 DEPENDS: creativecommons
 
+UPDATE_DESCRIPTION: [pwando] - Refactored css for view adaptation. Update OER skins before patching
 UPDATE_DESCRIPTION: [pwando] - Reformatted viewadaptation table per specs
 UPDATE_DESCRIPTION: [pwando] - Added sections on view adaptation
 UPDATE_DESCRIPTION: [pwando] - On adaptations - added keywords and linked each to an institution
