[pwando] Users can now comment on an adaptation

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.105
+MODULE_VERSION: 0.106
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
@@ -35,6 +35,7 @@ TABLE: tbl_oer_institution_types
 TABLE: tbl_oer_group_institutions
 TABLE: tbl_oer_productsections
 TABLE: tbl_oer_sectionnodes
+TABLE: tbl_oer_productcomments
 
 TEXT: mod_oer_maintitle1|Main title 1|Unesco’s Open Educational Resources Platform
 TEXT: mod_oer_maintitle2|Main title 2|UNESCO OER PRODUCTS
