--- a/facebookapps/register.conf
+++ b/facebookapps/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Face book applications
 MODULE_DESCRIPTION: Provides a means to create applications that plug into Facebook.
 MODULE_AUTHORS: Paul Scott
 MODULE_RELEASEDATE: 2007 06 24
-MODULE_VERSION: 0.30
+MODULE_VERSION: 0.301
 MODULE_PATH: facebookapps
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -17,6 +17,7 @@ BLOCK: fbcommentnarrow
 TAGS: facebook|social|web|ditributed|auth
 MODULE_STATUS: beta
 
+UPDATE_DESCRIPTION: Fixed the missing url (deprecated) in the API
 UPDATE_DESCRIPTION: added new facebook.php api
 UPDATE_DESCRIPTION: added newer facebook platform code and REST API. Added configs for API key and secret
 
