added node types

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.106
+MODULE_VERSION: 0.109
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
@@ -156,6 +156,13 @@ TEXT: mod_oer_addnode|Phrase Add new node|Add new node
 TEXT: mod_oer_nodename|Phrase Node name|Node name
 TEXT: mod_oer_createin|Phrase Create in|Create in
 TEXT: mod_oer_createsection|Phrase Create section|Create section
+TEXT: mod_oer_nodetype|Phrase Node Type|Node type
+TEXT: mod_oer_module|Word Module|Module
+TEXT: mod_oer_calendar|Word calendar|Calendar
+TEXT: mod_oer_year|Word Year|Year
+TEXT: mod_oer_sectionname|Section name|Section name
+TEXT: mod_oer_sectiontype|Section type|Section type
+
 
 COMMENT: TEXT FOR ADAPTATIONS
 TEXT: mod_oer_adaptation_heading_step1|Phrase Adaptation step 1|Adaptation step 1
