--- a/oer/register.conf
+++ b/oer/register.conf
@@ -10,6 +10,7 @@ MENU_CATEGORY: Resources
 
 DEPENDS: creativecommons
 
+UPDATE_DESCRIPTION: [pwando] - Added view full adaptation - WIP
 UPDATE_DESCRIPTION: [pwando] - Added functions for managing product comments
 UPDATE_DESCRIPTION: [pwando] - Refactored css for view adaptation. Update OER skins before patching
 UPDATE_DESCRIPTION: [pwando] - Reformatted viewadaptation table per specs
