[pwando] Added view full adaptation - added adaptation path

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -176,6 +176,7 @@ TEXT: mod_oer_newadaptation|Phrase New Adaptation|New Adaptation
 TEXT: mod_oer_adaptationscount|Word Adaptations|Adaptations
 TEXT: mod_oer_adaptedby|Phrase Adapted by|Adapted by
 TEXT: mod_oer_adaptedin|Phrase Adapted in|Adapted in
+TEXT: mod_oer_bookmark|Word Bookmark|Bookmark
 TEXT: mod_oer_fullinfo|Phrase Full information on this institution|Full information on this institution
 TEXT: mod_oer_managedby|Phrase Managed by|Managed by
 TEXT: mod_oer_comments|Word Comments|Comments
