Added curriculm support

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.109
+MODULE_VERSION: 0.112
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
@@ -37,6 +37,7 @@ TABLE: tbl_oer_group_institutions
 TABLE: tbl_oer_productsections
 TABLE: tbl_oer_sectionnodes
 TABLE: tbl_oer_productcomments
+TABLE: tbl_oer_curriculums
 
 TEXT: mod_oer_maintitle1|Main title 1|Unesco’s Open Educational Resources Platform
 TEXT: mod_oer_maintitle2|Main title 2|UNESCO OER PRODUCTS
