Added calendar support

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.112
+MODULE_VERSION: 0.113
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
@@ -38,6 +38,7 @@ TABLE: tbl_oer_productsections
 TABLE: tbl_oer_sectionnodes
 TABLE: tbl_oer_productcomments
 TABLE: tbl_oer_curriculums
+TABLE: tbl_oer_calendar
 
 TEXT: mod_oer_maintitle1|Main title 1|Unesco’s Open Educational Resources Platform
 TEXT: mod_oer_maintitle2|Main title 2|UNESCO OER PRODUCTS
