Returned page template to original form

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.113
+MODULE_VERSION: 0.114
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
@@ -247,8 +247,32 @@ TEXT: mod_oer_group_locincorrect|Label for location|Please enter your location i
 COMMENT: ------------ Rules for the group edit form -----------------
 TEXT: mod_oer_grouprule_namerequired|Text indicating that the group name is required|Group name is required; please enter it in the appropriate field.
 
+COMMENT: ------------ Text for the user edit form -----------------
+TEXT: mod_oer_user_heading_edit|Edit user|Edit user details
+TEXT: mod_oer_user_heading_new|Add user|Register a new user
+TEXT: mod_oer_user_heading_selfreg|Register yourself|Register yourself
+TEXT: mod_oer_user_youcanopenid|Information about open id|Did you know that you can also register yourself in the OER system by logging in with your open Id. Common open Id providers are Google, Yahoo, Twitter, or any other open Id provider. Once you have done so, you can return here to fill in your extra information.
+
+USES: phrase_firstname|First name|First name
+USES: word_surname|Surname|Surname
+USES: word_username|User name|Username
+USES: phrase_emailaddress|Email address|Email address
+USES: word_password|Password|Password
+USES: word_gender|Gender|Gender
+USES: phrase_birthdate|Birth date|Birth date
+USES: word_city|City|City
+USES: word_state|State|State or Province
+USES: phrase_postalcode|Postal code|Postal code
+USES: word_country|Country|Country
+USES: phrase_orgcomp|Organization or company|Organization or company
+USES: phrase_jobtitle|Job title|Job title
+USES: phrase_occupationtype|Type of occupation|Type of occupation
+USES: phrase_workphone|Work phone number|Work phone number
+USES: phrase_mobilephone|Mobile phone number|Mobile phone number
+USES: phrase_aboutyou|About you|About you
+USES: word_website|Website URL|Website URL
 
 
 COMMENT: CHANGE TO USES
-TEXT: mod_oer_group_cancel_button|Heading for button cancel|Cancel
-TEXT: mod_oer_group_save_button|Heading for button save|Save
+USES: word_cancel|Heading for button cancel|Cancel
+USES: word_save|Heading for button save|Save
