Added code for OER extra user data

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,13 +3,14 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.114
+MODULE_VERSION: 0.115
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
 
 DEPENDS: creativecommons
 
+UPDATE_DESCRIPTION: [dkeats] - Added code for userextra - still a WIP
 UPDATE_DESCRIPTION: [pwando] - Added view full adaptation - WIP
 UPDATE_DESCRIPTION: [pwando] - Added functions for managing product comments
 UPDATE_DESCRIPTION: [pwando] - Refactored css for view adaptation. Update OER skins before patching
@@ -39,6 +40,7 @@ TABLE: tbl_oer_sectionnodes
 TABLE: tbl_oer_productcomments
 TABLE: tbl_oer_curriculums
 TABLE: tbl_oer_calendar
+TABLE: tbl_oer_userextra
 
 TEXT: mod_oer_maintitle1|Main title 1|Unesco’s Open Educational Resources Platform
 TEXT: mod_oer_maintitle2|Main title 2|UNESCO OER PRODUCTS
