Added code for OER extra user data save code

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.115
+MODULE_VERSION: 0.116
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
@@ -273,6 +273,7 @@ USES: phrase_workphone|Work phone number|Work phone number
 USES: phrase_mobilephone|Mobile phone number|Mobile phone number
 USES: phrase_aboutyou|About you|About you
 USES: word_website|Website URL|Website URL
+USES: word_address|Address|Address
 
 
 COMMENT: CHANGE TO USES
