added add/move folder

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -4,6 +4,7 @@ MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
 MODULE_VERSION: 0.116
+
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
@@ -167,6 +168,8 @@ TEXT: mod_oer_calendar|Word calendar|Calendar
 TEXT: mod_oer_year|Word Year|Year
 TEXT: mod_oer_sectionname|Section name|Section name
 TEXT: mod_oer_sectiontype|Section type|Section type
+TEXT: mod_oer_folder|Word folder|Folder
+TEXT: mod_oer_status|Word status|Status
 
 
 COMMENT: TEXT FOR ADAPTATIONS
