added editing/moving/viewing  of sections

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.116
+MODULE_VERSION: 0.121
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -42,6 +42,8 @@ TABLE: tbl_oer_productcomments
 TABLE: tbl_oer_curriculums
 TABLE: tbl_oer_calendar
 TABLE: tbl_oer_userextra
+TABLE: tbl_oer_attachments
+TABLE: tbl_oer_sectioncontent
 
 TEXT: mod_oer_maintitle1|Main title 1|Unesco’s Open Educational Resources Platform
 TEXT: mod_oer_maintitle2|Main title 2|UNESCO OER PRODUCTS
@@ -170,6 +172,12 @@ TEXT: mod_oer_sectionname|Section name|Section name
 TEXT: mod_oer_sectiontype|Section type|Section type
 TEXT: mod_oer_folder|Word folder|Folder
 TEXT: mod_oer_status|Word status|Status
+TEXT: mod_oer_addnewcontent|Phrase Add new content|Add new content
+TEXT: mod_oer_content|Word content|Content
+TEXT: mod_oer_contributedby|Phrase Contributed by|Contributed by
+TEXT: mod_oer_fullviewofproduct|Phrase full view of product|Full view of product
+TEXT: mod_oer_makenewadaptation|Phrase Make new adaptation using thos UNESCO Product|Make new adaptation using thos UNESCO Product
+TEXT: mod_oer_existingadaptations|Phrase See existing adaptation of this UNESCO Product|See existing adaptation of this UNESCO Product
 
 
 COMMENT: TEXT FOR ADAPTATIONS
