Added language strings for JS errors

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.121
+MODULE_VERSION: 0.122
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -285,8 +285,14 @@ USES: phrase_mobilephone|Mobile phone number|Mobile phone number
 USES: phrase_aboutyou|About you|About you
 USES: word_website|Website URL|Website URL
 USES: word_address|Address|Address
+USES: phrase_requiredfield
+USES: phrase_min2chars
+USES: phrase_min8chars
+USES: mod_oer_say100
+USES: phrase_validemail
+USES: phrase_validdate
+USES: phrase_makeselection
+USES: phrase_firstchoiceno
 
-
-COMMENT: CHANGE TO USES
 USES: word_cancel|Heading for button cancel|Cancel
 USES: word_save|Heading for button save|Save
