Added language strings for JS errors - with text!!

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -285,14 +285,14 @@ USES: phrase_mobilephone|Mobile phone number|Mobile phone number
 USES: phrase_aboutyou|About you|About you
 USES: word_website|Website URL|Website URL
 USES: word_address|Address|Address
-USES: phrase_requiredfield
-USES: phrase_min2chars
-USES: phrase_min8chars
-USES: mod_oer_say100
-USES: phrase_validemail
-USES: phrase_validdate
-USES: phrase_makeselection
-USES: phrase_firstchoiceno
+USES: phrase_requiredfield|Required|Required
+USES: phrase_min2chars|Minimum 2 characters|Minimum 2 characters
+USES: phrase_min8chars|Minimum 8 characters|Minimum 8 characters
+TEXT: mod_oer_say100|Please say a bit more about yourself|Please say a bit more about yourself
+USES: phrase_validemail|Requires valid email address|Requires valid email address
+USES: phrase_validdate|Invalid date|Invalid date
+USES: phrase_makeselection|Make a selection|Make a selection
+USES: phrase_firstchoiceno|First option not valid|First option not valid
 
 USES: word_cancel|Heading for button cancel|Cancel
 USES: word_save|Heading for button save|Save
