--- a/oer/register.conf
+++ b/oer/register.conf
@@ -287,12 +287,13 @@ USES: word_website|Website URL|Website URL
 USES: word_address|Address|Address
 USES: phrase_requiredfield|Required|Required
 USES: phrase_min2chars|Minimum 2 characters|Minimum 2 characters
+USES: phrase_min6chars|Minimum 6 characters|Minimum 6 characters
 USES: phrase_min8chars|Minimum 8 characters|Minimum 8 characters
 TEXT: mod_oer_say100|Please say a bit more about yourself|Please say a bit more about yourself
 USES: phrase_validemail|Requires valid email address|Requires valid email address
 USES: phrase_validdate|Invalid date|Invalid date
 USES: phrase_makeselection|Make a selection|Make a selection
 USES: phrase_firstchoiceno|First option not valid|First option not valid
-
+USES: phrase_passwdnotmatch|Passwords must match|Passwords must match
 USES: word_cancel|Heading for button cancel|Cancel
 USES: word_save|Heading for button save|Save
