SERIALIZE doesn't work with USES, need to check that & fix - had to change them to text

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.122
+MODULE_VERSION: 0.123
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -286,14 +286,15 @@ USES: phrase_aboutyou|About you|About you
 USES: word_website|Website URL|Website URL
 USES: word_address|Address|Address
 USES: phrase_requiredfield|Required|Required
-USES: phrase_min2chars|Minimum 2 characters|Minimum 2 characters
-USES: phrase_min6chars|Minimum 6 characters|Minimum 6 characters
-USES: phrase_min8chars|Minimum 8 characters|Minimum 8 characters
+COMMENT - SERIALIZE doesn't work with USES, need to check that & fix
+TEXT: phrase_min2chars|Minimum 2 characters|Minimum 2 characters
+TEXT: phrase_min6chars|Minimum 6 characters|Minimum 6 characters
+TEXT: phrase_min8chars|Minimum 8 characters|Minimum 8 characters
 TEXT: mod_oer_say100|Please say a bit more about yourself|Please say a bit more about yourself
-USES: phrase_validemail|Requires valid email address|Requires valid email address
-USES: phrase_validdate|Invalid date|Invalid date
-USES: phrase_makeselection|Make a selection|Make a selection
-USES: phrase_firstchoiceno|First option not valid|First option not valid
-USES: phrase_passwdnotmatch|Passwords must match|Passwords must match
+TEXT: phrase_validemail|Requires valid email address|Requires valid email address
+TEXT: phrase_validdate|Invalid date|Invalid date
+TEXT: phrase_makeselection|Make a selection|Make a selection
+TEXT: phrase_firstchoiceno|First option not valid|First option not valid
+TEXT: phrase_passwdnotmatch|Passwords must match|Passwords must match
 USES: word_cancel|Heading for button cancel|Cancel
 USES: word_save|Heading for button save|Save
