more language strings

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.123
+MODULE_VERSION: 0.125
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -287,14 +287,14 @@ USES: word_website|Website URL|Website URL
 USES: word_address|Address|Address
 USES: phrase_requiredfield|Required|Required
 COMMENT - SERIALIZE doesn't work with USES, need to check that & fix
-TEXT: phrase_min2chars|Minimum 2 characters|Minimum 2 characters
-TEXT: phrase_min6chars|Minimum 6 characters|Minimum 6 characters
-TEXT: phrase_min8chars|Minimum 8 characters|Minimum 8 characters
+TEXT: mod_oer_min2chars|Minimum 2 characters|Minimum 2 characters
+TEXT: mod_oer_min6chars|Minimum 6 characters|Minimum 6 characters
+TEXT: mod_oer_min8chars|Minimum 8 characters|Minimum 8 characters
 TEXT: mod_oer_say100|Please say a bit more about yourself|Please say a bit more about yourself
-TEXT: phrase_validemail|Requires valid email address|Requires valid email address
-TEXT: phrase_validdate|Invalid date|Invalid date
-TEXT: phrase_makeselection|Make a selection|Make a selection
-TEXT: phrase_firstchoiceno|First option not valid|First option not valid
-TEXT: phrase_passwdnotmatch|Passwords must match|Passwords must match
+TEXT: mod_oer_validemail|Requires valid email address|Requires valid email address
+TEXT: mod_oer_validdate|Invalid date|Invalid date
+TEXT: mod_oer_makeselection|Make a selection|Make a selection
+TEXT: mod_oer_firstchoiceno|First option not valid|First option not valid
+TEXT: mod_oer_passwdnotmatch|Passwords must match|Passwords must match
 USES: word_cancel|Heading for button cancel|Cancel
 USES: word_save|Heading for button save|Save
