more language strings again

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.125
+MODULE_VERSION: 0.126
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -285,8 +285,9 @@ USES: phrase_mobilephone|Mobile phone number|Mobile phone number
 USES: phrase_aboutyou|About you|About you
 USES: word_website|Website URL|Website URL
 USES: word_address|Address|Address
-USES: phrase_requiredfield|Required|Required
+
 COMMENT - SERIALIZE doesn't work with USES, need to check that & fix
+TEXT: mod_oer_requiredfield|Required|Required
 TEXT: mod_oer_min2chars|Minimum 2 characters|Minimum 2 characters
 TEXT: mod_oer_min6chars|Minimum 6 characters|Minimum 6 characters
 TEXT: mod_oer_min8chars|Minimum 8 characters|Minimum 8 characters
