[pwando] Updated register dot conf to reflect changes

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.126
+MODULE_VERSION: 0.127
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -11,6 +11,7 @@ MENU_CATEGORY: Resources
 
 DEPENDS: creativecommons
 
+UPDATE_DESCRIPTION: [pwando] - Added extra form for adding new adaptation from product as per requirements. UPDATE OER SKIN. Still WIP
 UPDATE_DESCRIPTION: [dkeats] - Added code for userextra - still a WIP
 UPDATE_DESCRIPTION: [pwando] - Added view full adaptation - WIP
 UPDATE_DESCRIPTION: [pwando] - Added functions for managing product comments
