--- a/oer/register.conf
+++ b/oer/register.conf
@@ -179,7 +179,7 @@ TEXT: mod_oer_contributedby|Phrase Contributed by|Contributed by
 TEXT: mod_oer_fullviewofproduct|Phrase full view of product|Full view of product
 TEXT: mod_oer_makenewadaptation|Phrase Make new adaptation using thos UNESCO Product|Make new adaptation using thos UNESCO Product
 TEXT: mod_oer_existingadaptations|Phrase See existing adaptation of this UNESCO Product|See existing adaptation of this UNESCO Product
-
+TEXT: mod_oer_introduction|Word introduction|Introduction
 
 COMMENT: TEXT FOR ADAPTATIONS
 TEXT: mod_oer_adaptation_heading_step1|Phrase Adaptation step 1|Adaptation step 1
