--- a/forum/register.conf
+++ b/forum/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Discussion Forum
 MODULE_DESCRIPTION: This is a bulletin board system that allows users to post messages for others to read, and to reply to messages posted by other users. Messages are structured in a tree format but users can select how the forum is displayed to them. There is also support for tangents and moderation of messages.
 MODULE_AUTHORS: Tohir Solomons, enhancements by David Wafula
 MODULE_RELEASEDATE: 2006 08 25
-MODULE_VERSION: 3.002
+MODULE_VERSION: 3.003
 MODULE_PATH: forum
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -22,6 +22,7 @@ MENU_CATEGORY: Resources
 SIDEMENU: resources-2|site
 SIDEMENU: elearnpostlogin-2
 
+UPDATE_DESCRIPTION: Fixed bug where the check for the workgroup module was failing because of a spelling error
 UPDATE_DESCRIPTION: Bug fix
 UPDATE_DESCRIPTION: Add flag to set on/off ignore group membership
 UPDATE_DESCRIPTION: Corrected language item.
