Incremented version number.

--- a/workgroup/register.conf
+++ b/workgroup/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: [-workgroups-]
 MODULE_DESCRIPTION: Implements [-workgroups-] which allows lecturers to group students into [-workgroups-] and allocates each [-workgroup-] a chat room, a forum and a file share area.
 MODULE_AUTHORS: Jeremy O'Connor
 MODULE_RELEASEDATE: 2004 10 29
-MODULE_VERSION: 1.192
+MODULE_VERSION: 1.193
 MODULE_PATH: workgroup
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -29,6 +29,7 @@ TABLE: tbl_workgroupfiles
 COMMENT: TABLE: tbl_fileshare
 
 COMMENT: help
+UPDATE_DESCRIPTION: Fixed bug in lecturers array creation
 UPDATE_DESCRIPTION: Changed listAll method in dbWorkgroupUsers_class_inc.php to also return username
 UPDATE_DESCRIPTION: [pwando]  Renamed Enter to Join in workgroup home
 
