--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.127
+MODULE_VERSION: 0.128
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -11,6 +11,7 @@ MENU_CATEGORY: Resources
 
 DEPENDS: creativecommons
 
+UPDATE_DESCRIPTION: [pwando] - Added table for managing adaptations
 UPDATE_DESCRIPTION: [pwando] - Added extra form for adding new adaptation from product as per requirements. UPDATE OER SKIN. Still WIP
 UPDATE_DESCRIPTION: [dkeats] - Added code for userextra - still a WIP
 UPDATE_DESCRIPTION: [pwando] - Added view full adaptation - WIP
@@ -29,6 +30,7 @@ UPDATE_DESCRIPTION: [pwando] - adding functionality to manage adaptations
 COMMENT: Blocks used in the OER module
 WIDEBLOCK: groupedit
 
+TABLE: tbl_oer_adaptations
 TABLE: tbl_oer_products
 TABLE: tbl_oer_umbrella_themes
 TABLE: tbl_oer_themes
