Took the userextra  stuff out into its own module

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,14 +3,16 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.127
+MODULE_VERSION: 0.128
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
 
 DEPENDS: creativecommons
+DEPENDS: oeruserdata
 
+UPDATE_DESCRIPTION: [dkeats] - Removed the userdata stuff to its own module
 UPDATE_DESCRIPTION: [pwando] - Added extra form for adding new adaptation from product as per requirements. UPDATE OER SKIN. Still WIP
 UPDATE_DESCRIPTION: [dkeats] - Added code for userextra - still a WIP
 UPDATE_DESCRIPTION: [pwando] - Added view full adaptation - WIP
@@ -42,7 +44,6 @@ TABLE: tbl_oer_sectionnodes
 TABLE: tbl_oer_productcomments
 TABLE: tbl_oer_curriculums
 TABLE: tbl_oer_calendar
-TABLE: tbl_oer_userextra
 TABLE: tbl_oer_attachments
 TABLE: tbl_oer_sectioncontent
 
@@ -202,7 +203,7 @@ TEXT: mod_oer_existingadaptations|Phrase See existing adaptations of this UNESCO
 TEXT: mod_oer_editmetadata|Phrase Edit metadata|Edit metadata
 TEXT: mod_oer_fullprodview|Phrase Full view of product|Full view of product
 
-COMMENT: THIS CRAP IS REPEATED MILLIONS OF TIMES... WHY NOT USES:??????????
+COMMENT: THIS CRAP IS REPEATED MILLIONS OF TIMES... WHY NOT USES:??????????<<<<<<<<<<<<<<<<<<<<<<,
 TEXT: mod_oer_loclat|Latitude|Latitude
 TEXT: mod_oer_loclong|Longitude|Longitude
 TEXT: mod_oer_country|Country|Country
@@ -261,12 +262,7 @@ TEXT: mod_oer_group_locincorrect|Label for location|Please enter your location i
 COMMENT: ------------ Rules for the group edit form -----------------
 TEXT: mod_oer_grouprule_namerequired|Text indicating that the group name is required|Group name is required; please enter it in the appropriate field.
 
-COMMENT: ------------ Text for the user edit form -----------------
-TEXT: mod_oer_user_heading_edit|Edit user|Edit user details
-TEXT: mod_oer_user_heading_new|Add user|Register a new user
-TEXT: mod_oer_user_heading_selfreg|Register yourself|Register yourself
-TEXT: mod_oer_user_youcanopenid|Information about open id|Did you know that you can also register yourself in the OER system by logging in with your open Id. Common open Id providers are Google, Yahoo, Twitter, or any other open Id provider. Once you have done so, you can return here to fill in your extra information.
-
+COMMENT:  DO WE NEED TO KEEP THESE? <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
 USES: phrase_firstname|First name|First name
 USES: word_surname|Surname|Surname
 USES: word_username|User name|Username
@@ -286,20 +282,6 @@ USES: phrase_mobilephone|Mobile phone number|Mobile phone number
 USES: phrase_aboutyou|About you|About you
 USES: word_website|Website URL|Website URL
 USES: word_address|Address|Address
-
-COMMENT - SERIALIZE doesn't work with USES, need to check that & fix
-TEXT: mod_oer_requiredfield|Required|Required
-TEXT: mod_oer_min2chars|Minimum 2 characters|Minimum 2 characters
-TEXT: mod_oer_min6chars|Minimum 6 characters|Minimum 6 characters
-TEXT: mod_oer_min8chars|Minimum 8 characters|Minimum 8 characters
-TEXT: mod_oer_say100|Please say a bit more about yourself|Please say a bit more about yourself
-TEXT: mod_oer_validemail|Requires valid email address|Requires valid email address
-TEXT: mod_oer_validdate|Invalid date|Invalid date
-TEXT: mod_oer_makeselection|Make a selection|Make a selection
-TEXT: mod_oer_firstchoiceno|First option not valid|First option not valid
-TEXT: mod_oer_passwdnotmatch|Passwords must match|Passwords must match
-TEXT: mod_oer_nofirstchoice|Choose an option|Choose an option
-TEXT: mod_oer_usernametaken|Username unavailable|Username unavailable
 
 USES: word_cancel|Heading for button cancel|Cancel
 USES: word_save|Heading for button save|Save
