[pwando] - Formated adaptation grid view as per specs

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -12,6 +12,7 @@ MENU_CATEGORY: Resources
 DEPENDS: creativecommons
 DEPENDS: oeruserdata
 
+UPDATE_DESCRIPTION: [pwando] - Formatted adaptations grid view as per specs
 UPDATE_DESCRIPTION: [dkeats] - Removed the userdata stuff to its own module
 UPDATE_DESCRIPTION: [pwando] - Added extra form for adding new adaptation from product as per requirements. UPDATE OER SKIN. Still WIP
 UPDATE_DESCRIPTION: [dkeats] - Added code for userextra - still a WIP
