Most of the functionality is now there, except for userlisting

--- a/oeruserdata/register.conf
+++ b/oeruserdata/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER User Data
 MODULE_DESCRIPTION: Provides a means to capture and maintain the extra user data required by the OER module. It can also be useful to any other project that needs this extra data.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: February 1, 2012, 8:34 am
-MODULE_VERSION: 0.005
+MODULE_VERSION: 0.009
 MODULE_PATH: oeruserdata
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -26,6 +26,12 @@ TEXT: mod_oeruserdata_hd_new|Add user|Register a new user
 TEXT: mod_oeruserdata_hd_selfreg|Register yourself|Register yourself
 TEXT: mod_oeruserdata_youcanopenid|Information about open id|Did you know that you can also register yourself in the OER system by logging in with your open Id. Common open Id providers are Google, Yahoo, Twitter, or any other open Id provider. Once you have done so, you can return here to fill in your extra information.
 TEXT: mod_oeruserdata_regu|Register as a new user|Register as a new user
+TEXT: mod_oeruserdata_linksttl|Title for block of links to your user data|Your user data
+TEXT: mod_oeruserdata_edityou|Edit your details|Edit your details
+TEXT: mod_oeruserdata_selfreg|Register yourself|Register yourself
+TEXT: mod_oeruserdata_adminreg|Register a user (as admin)|Register a user
+TEXT: mod_oeruserdata_noperm|User has no permissions to edit another|You do not have permission to edit the record you are trying to edit. You should not arrive at this point unless you are trying to do something that is naughty.
+TEXT: mod_oeruserdata_nopermtitle|No permission|No permission
 
 USES: phrase_firstname|First name|First name
 USES: word_surname|Surname|Surname
