--- a/oer/register.conf
+++ b/oer/register.conf
@@ -179,6 +179,7 @@ TEXT: mod_oer_addnewcontent|Phrase Add new content|Add new content
 TEXT: mod_oer_content|Word content|Content
 TEXT: mod_oer_contributedby|Phrase Contributed by|Contributed by
 TEXT: mod_oer_fullviewofproduct|Phrase full view of product|Full view of product
+TEXT: mod_oer_productfullinfo|Phrase Full information on this product|Full information on this product
 TEXT: mod_oer_makenewadaptation|Phrase Make new adaptation using thos UNESCO Product|Make new adaptation using thos UNESCO Product
 TEXT: mod_oer_existingadaptations|Phrase See existing adaptation of this UNESCO Product|See existing adaptation of this UNESCO Product
 TEXT: mod_oer_introduction|Word introduction|Introduction
