[pwando] - Included adaptations table. Kindly patch

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.128
+MODULE_VERSION: 0.129
 
 MODULE_PATH: oer
 MODULE_STATUS: beta
@@ -12,6 +12,7 @@ MENU_CATEGORY: Resources
 DEPENDS: creativecommons
 DEPENDS: oeruserdata
 
+UPDATE_DESCRIPTION: [pwando] - Included adaptations table. Kindly patch
 UPDATE_DESCRIPTION: [pwando] - Formatted adaptations grid view as per specs
 UPDATE_DESCRIPTION: [dkeats] - Removed the userdata stuff to its own module
 UPDATE_DESCRIPTION: [pwando] - Added extra form for adding new adaptation from product as per requirements. UPDATE OER SKIN. Still WIP
@@ -47,6 +48,7 @@ TABLE: tbl_oer_curriculums
 TABLE: tbl_oer_calendar
 TABLE: tbl_oer_attachments
 TABLE: tbl_oer_sectioncontent
+TABLE: tbl_oer_adaptations
 
 TEXT: mod_oer_maintitle1|Main title 1|Unesco’s Open Educational Resources Platform
 TEXT: mod_oer_maintitle2|Main title 2|UNESCO OER PRODUCTS
@@ -180,8 +182,6 @@ TEXT: mod_oer_content|Word content|Content
 TEXT: mod_oer_contributedby|Phrase Contributed by|Contributed by
 TEXT: mod_oer_fullviewofproduct|Phrase full view of product|Full view of product
 TEXT: mod_oer_productfullinfo|Phrase Full information on this product|Full information on this product
-TEXT: mod_oer_makenewadaptation|Phrase Make new adaptation using thos UNESCO Product|Make new adaptation using thos UNESCO Product
-TEXT: mod_oer_existingadaptations|Phrase See existing adaptation of this UNESCO Product|See existing adaptation of this UNESCO Product
 TEXT: mod_oer_introduction|Word introduction|Introduction
 
 COMMENT: TEXT FOR ADAPTATIONS
@@ -204,6 +204,8 @@ TEXT: mod_oer_makenewfromadaptation|Phrase Make a new adaptation using this UNES
 TEXT: mod_oer_existingadaptations|Phrase See existing adaptations of this UNESCO Product|See existing adaptations of this UNESCO Product
 TEXT: mod_oer_editmetadata|Phrase Edit metadata|Edit metadata
 TEXT: mod_oer_fullprodview|Phrase Full view of product|Full view of product
+TEXT: mod_oer_makenewadaptation|Phrase Make new adaptation using thos UNESCO Product|Make new adaptation using thos UNESCO Product
+TEXT: mod_oer_existingadaptations|Phrase See existing adaptation of this UNESCO Product|See existing adaptation of this UNESCO Product
 
 COMMENT: THIS CRAP IS REPEATED MILLIONS OF TIMES... WHY NOT USES:??????????<<<<<<<<<<<<<<<<<<<<<<,
 TEXT: mod_oer_loclat|Latitude|Latitude
@@ -259,7 +261,8 @@ TEXT: mod_oer_group_state|Heading for group state|State
 TEXT: mod_oer_group_city|Heading for group city|City
 TEXT: mod_oer_group_postalcode|Heading for group postal code|Postal Code
 TEXT: mod_oer_group_institution|Heading for group institution link|Institution
-TEXT: mod_oer_group_locincorrect|Label for location|Please enter your location if the provided location is incorrect 
+TEXT: mod_oer_group_locincorrect|Label for location|Please enter your location if the provided location is incorrect
+TEXT: mod_oer_existingadaptations|Phrase See all existing adaptations of this product|See all existing adaptations of this product
 
 COMMENT: ------------ Rules for the group edit form -----------------
 TEXT: mod_oer_grouprule_namerequired|Text indicating that the group name is required|Group name is required; please enter it in the appropriate field.
