Fixed missing captcha, and group verification

--- a/oeruserdata/register.conf
+++ b/oeruserdata/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER User Data
 MODULE_DESCRIPTION: Provides a means to capture and maintain the extra user data required by the OER module. It can also be useful to any other project that needs this extra data.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: February 1, 2012, 8:34 am
-MODULE_VERSION: 0.009
+MODULE_VERSION: 0.010
 MODULE_PATH: oeruserdata
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -32,6 +32,8 @@ TEXT: mod_oeruserdata_selfreg|Register yourself|Register yourself
 TEXT: mod_oeruserdata_adminreg|Register a user (as admin)|Register a user
 TEXT: mod_oeruserdata_noperm|User has no permissions to edit another|You do not have permission to edit the record you are trying to edit. You should not arrive at this point unless you are trying to do something that is naughty.
 TEXT: mod_oeruserdata_nopermtitle|No permission|No permission
+TEXT: mod_oeruserdata_provehum|Captcha explanation|You need to prove you are human by filling in the letters and numbers you see in the image in the box immediately below it. 
+TEXT: mod_oeruserdata_caplab|Captcha label|Prove you are human
 
 USES: phrase_firstname|First name|First name
 USES: word_surname|Surname|Surname
