--- a/oer/register.conf
+++ b/oer/register.conf
@@ -12,6 +12,7 @@ MENU_CATEGORY: Resources
 DEPENDS: creativecommons
 DEPENDS: oeruserdata
 
+UPDATE_DESCRIPTION: [pwando] - Renamed adaptations home path from 1b to adaptationlist
 UPDATE_DESCRIPTION: [pwando] - Included adaptations table. Kindly patch
 UPDATE_DESCRIPTION: [pwando] - Formatted adaptations grid view as per specs
 UPDATE_DESCRIPTION: [dkeats] - Removed the userdata stuff to its own module
