[pwando] Adding manage section adaptation

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -113,6 +113,7 @@ TEXT: mod_oer_attachingfile|Phrase attaching file|Attaching file
 TEXT: mod_oer_uploadinprogress|Phrase upload in progress|Upload in progress
 TEXT: mod_oer_uploaderror|Phrase file upload error|File upload error
 TEXT: mod_oer_hasbeenuploaded|Phrase has been uploade|has been uploaded
+TEXT: mod_oer_uploadedfile|Phrase Uploaded file|Uploaded file
 TEXT: mod_oer_createumbrellatheme|Phrase Create Umbrella Theme|Create umbrella theme
 TEXT: mod_oer_createtheme|Phrase Create Theme|Create theme
 TEXT: mod_oer_count|Word count|Count
@@ -184,6 +185,13 @@ TEXT: mod_oer_contributedby|Phrase Contributed by|Contributed by
 TEXT: mod_oer_fullviewofproduct|Phrase full view of product|Full view of product
 TEXT: mod_oer_productfullinfo|Phrase Full information on this product|Full information on this product
 TEXT: mod_oer_introduction|Word introduction|Introduction
+TEXT: mod_oer_sectiontitle|Section title|Section title
+TEXT: mod_oer_sectioncontent|Section content|Section content
+TEXT: mod_oer_addfromthe|Phrase add from the|Add from the
+TEXT: mod_oer_addyourown|Phrase add your own|Add your own
+TEXT: mod_oer_required|Word required|Required
+TEXT: mod_oer_currentpath|Phrase Current path|Current path
+TEXT: mod_oer_attachfile|Phrase Attach file|Attach file
 
 COMMENT: TEXT FOR ADAPTATIONS
 TEXT: mod_oer_adaptation_heading_step1|Phrase Adaptation step 1|Adaptation step 1
@@ -207,6 +215,11 @@ TEXT: mod_oer_editmetadata|Phrase Edit metadata|Edit metadata
 TEXT: mod_oer_fullprodview|Phrase Full view of product|Full view of product
 TEXT: mod_oer_makenewadaptation|Phrase Make new adaptation using thos UNESCO Product|Make new adaptation using thos UNESCO Product
 TEXT: mod_oer_existingadaptations|Phrase See existing adaptation of this UNESCO Product|See existing adaptation of this UNESCO Product
+TEXT: mod_oer_adaptationotes|Phrase Adaptation notes|Adaptation notes
+TEXT: mod_oer_adding|Word Adding|Adding
+TEXT: mod_oer_editing|Word Editing|Editing
+TEXT: mod_oer_sectionviewaddadaptation|Phrase Section view add adaptation|Section view add adaptation
+TEXT: mod_oer_sectionvieweditadaptation|Phrase Section view edit adaptation|Section view edit adaptation
 
 COMMENT: THIS CRAP IS REPEATED MILLIONS OF TIMES... WHY NOT USES:??????????<<<<<<<<<<<<<<<<<<<<<<,
 TEXT: mod_oer_loclat|Latitude|Latitude
